--- a/javascript-basics-01/Step_6.html
+++ b/javascript-basics-01/Step_6.html
@@ -11,4 +11,5 @@
             <button  id="validate" name ="validate">validate</button>
         </form>
     </body>
+    <script src="Step_06.js"></script>
 </html>
