--- a/javascript-basics-01/Step_8.html
+++ b/javascript-basics-01/Step_8.html
@@ -10,4 +10,5 @@
             <button id="validate" name="validate">validate</button>
         </form>
     </body>
+    <script src="Step_08.js"></script>
 </html>
