--- a/javascript-basics-02/step 3/index.html
+++ b/javascript-basics-02/step 3/index.html
@@ -5,8 +5,11 @@
   <title>Step 3</title>
 </head>
 <body>
+  <div></div>
   <form>
-    <label for="name">Your name  : </label><input type="text" name="name" value="" id="name"/>
+    <label for="name">Your name  : </label><input type="text" name="name" value="" id="name" onkeyup="addText()"/>
   </form>
+
+<script src="Step_3.js"></script>
 </body>
 </html>
